# Bocachica-Lottery

./: README.md
FE/: .eslintrc.json  README.md  package.json  tsconfig.json
FE/public/: index.html  manifest.json
FE/src/: index.css  index.tsx
FE/src/assets/locales/: en.json
FE/src/pages/card-page/: Footer.tsx  index.tsx  styles.ts
FE/src/pages/home-page/: index.tsx  styles.ts
FE/src/providers/: DataProvider.tsx  NearWalletProvider.tsx  ServiceProvider.tsx
FE/src/providers/helpers/: index.ts
FE/src/providers/interfaces/: index.ts
FE/src/routes/: constant.ts  index.tsx
FE/src/services/config/: index.ts
FE/src/services/contracts/: FungibleToken.ts  LotteryContract.ts  NonFungibleToken.ts  contractMethods.ts  index.ts
FE/src/services/helpers/: apiService.ts  index.ts  receiptsService.tsx
FE/src/services/interfaces/: index.ts
FE/src/services/translation/: index.ts
FE/src/shared/calculation/: index.ts
FE/src/shared/constant/: index.ts
FE/src/shared/hooks/: useAuctionDynamicData.ts  useDateAndStatus.ts  useImageDataUpload.ts  useWindowDimensions.ts
FE/src/shared/interfaces/: index.ts
FE/src/shared/providers/: ModalProvider.tsx
FE/src/shared/theme/: index.ts
SC/: Cargo.toml  README.md
SC/contract/: Cargo.toml  build_docker.sh  build_local.sh  create_auction.sh
SC/contract/res/: aml.wasm  auction_release.wasm  non_fungible_token.wasm
SC/contract/src/: auction.rs  claim.rs  getters.rs  lib.rs  owner.rs  token_receiver.rs
SC/contract/src/aml/: aml_registrar.rs  aml_usage.rs  mod.rs
SC/contract/tests/: simulation_test.rs
(+65 files in other folders)
